--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,23 @@
+/* body{
+  height: 100vh;
+} */
 #root {
-  max-width: 1280px;
+  /* max-width: 1280px; */
   margin: 0 auto;
-  padding: 2rem;
+  /* padding: 2rem; */
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
+
+@media (max-width: 768px) { /* Bootstrap's 'sm' breakpoint */
+  .h-md-auto {
+    height: auto !important;
+  }
+}
+
+.min-h-100{
+  min-height: 100%;
+}
+
