--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,24 @@
 body{
   height: 100vh;
 }
+.font-nova {
+  font-family: "Nova Round", system-ui;
+  font-weight:400;
+  font-size: 2.2em;
+  font-style: normal;
+}
+
+.nav-font {
+  font-size: 1.4em;
+  color: white;
+}
+.font-inter {
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+  /* font-weight: <weight>; */
+  font-style: normal;
+}
+
 #root {
   /* max-width: 1280px; */
   margin: 0 auto;
