--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@ body{
 .font-nova {
   font-family: "Nova Round", system-ui;
   font-weight:400;
-  font-size: 2.2em;
+  /* font-size: 2.2em; */
   font-style: normal;
 }
 
