--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,9 @@ body{
   font-size: 1.4em;
   color: white;
 }
+.logo{
+  font-size: 2.2em;
+}
 .font-inter {
   font-family: "Inter", sans-serif;
   font-optical-sizing: auto;
