updated create transaction component

--- a/src/App.css
+++ b/src/App.css
@@ -10,9 +10,9 @@ strong{
   /* background: linear-gradient(90deg, #113632 0%, #206c65 100%);  */
 }
 
-.btn{
+/* .btn{
   border-radius: 1em;
-}
+} */
 .btn-main{
   background-color: #309C91;
   color: white;
